test/gpu/native/errors/assertOnGpuIneligibleLoop.good
assertOnGpuIneligibleLoop.chpl:12: In function 'main':
assertOnGpuIneligibleLoop.chpl:14: error: using @gpu.blockSize, 'setBlockSize', @gpu.itersPerThread, or @assertOnGpu on a non-GPU-eligible loop
